fix header & menu on mobile res

--- a/app/blocks/menu/menu.scss
+++ b/app/blocks/menu/menu.scss
@@ -151,7 +151,7 @@
   &_active {
     @include screen(tablet, max) {
       opacity: 1;
-      z-index: 5;
+      z-index: 25;
       pointer-events: all;
     }
   }
