--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -11,6 +11,7 @@
 @import '../pages/**/*';
 
 body {
+  position: relative;
   color: $color-darkgrey;
 }
 
